--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -231,7 +231,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     <h2 id="kbd_label">Keyboard Support</h2>
     <section>
       <h3 id="kbd_label_1">Toolbar</h3>
-      <p>The toolbar provides the following keyboard support defined by the <a href="../../#toolbar">toolbar pattern.</a></p>
+      <p>The toolbar provides the following keyboard support described in the <a href="../../#toolbar">toolbar pattern.</a></p>
       <table aria-labelledby="kbd_label_1 kbd_label" class="def">
         <thead>
           <tr>
@@ -284,7 +284,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_2">Toggle Buttons (Bold, Italic, Underline)</h3>
-      <p>The toggle buttons for choosing to apply <b>Bold</b>, <i>Italic</i>, and <u>Underline</u> styling provide the following keyboard support defined by the <a href="../../#button">button design pattern</a>.</p>
+      <p>The toggle buttons for choosing to apply <b>Bold</b>, <i>Italic</i>, and <u>Underline</u> styling provide the following keyboard support described in the <a href="../../#button">button design pattern</a>.</p>
       <table aria-labelledby="kbd_label_2 kbd_label" class="def">
         <thead>
           <tr>
@@ -307,7 +307,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
         The buttons for choosing left, center, or right text alignment are styled like toggle buttons.
         However, since pressing one toggles off another so that only one button in the group is in the pressed state, the toggles behave like radio buttons.
         Because ARIA is designed to describe behavior, not styling, to assistive technologies,
-        the alignment toggles provide the following keyboard support defined by the <a href="../../#radiobutton">radio group design pattern.</a>
+        the alignment toggles provide the following keyboard support described in the <a href="../../#radiobutton">radio group design pattern.</a>
         As described in the pattern, nesting a radio group in a toolbar calls for an important behavioral difference compared to radios outside a toolbar: moving focus inside the group does not automatically change which button is checked.
       </p>
       <table aria-labelledby="kbd_label_3 kbd_label" class="def">
@@ -370,9 +370,9 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="kbd_label_4">Button (Cut, Copy and Paste)</h3>
+      <h3 id="kbd_label_4">Button (Cut, Copy, Paste)</h3>
       <p>
-        The buttons for cut, copy, and paste provide the following keyboard support defined by the <a href="../../#button">button design pattern.</a>
+        The buttons for cut, copy, and paste provide the following keyboard support described in the <a href="../../#button">button design pattern.</a>
         While they are HTML button elements, as described in the accessibility features section above, in order to remain focusable when disabled, they use <code>aria-disabled</code> instead of the HTML <code>disabled</code> attribute.
       </p>
       <table aria-labelledby="kbd_label_4 kbd_label" class="def">
@@ -393,7 +393,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_5">Menu Button (Font Family)</h3>
-      <p>The menu button for opening the font family menu provides the following keyboard support defined by the <a href="../../#menubutton">menu button design pattern.</a></p>
+      <p>The menu button for opening the font family menu provides the following keyboard support described in the <a href="../../#menubutton">menu button design pattern.</a></p>
       <table aria-labelledby="kbd_label_5 kbd_label" class="def">
         <thead>
           <tr>
@@ -420,7 +420,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_6">Menu (Font Family)</h3>
-      <p>The menu for choosing a font family provides the following keyboard support defined by the <a href="../../#menu">Menu design pattern.</a></p>
+      <p>The menu for choosing a font family provides the following keyboard support described in the <a href="../../#menu">Menu design pattern.</a></p>
       <table aria-labelledby="kbd_label_6 kbd_label" class="def">
         <thead>
           <tr>
@@ -461,7 +461,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_7">Spin Button (Font Size)</h3>
-      <p>The spin button for changing font size provides the following keyboard support as defined by the <a href="../../#spinbutton">spin button design pattern.</a></p>
+      <p>The spin button for changing font size provides the following keyboard support described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
       <table aria-labelledby="kbd_label_7 kbd_label" class="def">
         <thead>
           <tr>
@@ -515,7 +515,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     <section>
       <h3 id="kbd_label_9">Link (Help)</h3>
       <p>
-        The link for opening a help page provides the following keyboard support as defined by the <a href="../../#link">link design pattern.</a>
+        The link for opening a help page provides the following keyboard support described in the <a href="../../#link">link design pattern.</a>
         As an HTML link, the keyboard support is provided by the browser.
       </p>
       <table aria-labelledby="kbd_label_9 kbd_label" class="def">
@@ -540,7 +540,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <section>
       <h3 id="rps_label_1">Toolbar</h3>
-      <table aria-labelledby="rps_label_1" class="data attributes">
+      <table aria-labelledby="rps_label_1 rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -556,8 +556,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
             <td><code>div</code></td>
             <td>
               <ul>
-                <li>Identifies the toolbar container.</li>
-                <li>Accessible name is defined using <code>aria-label</code>.</li>
+                <li>Indicates the container is a <code>toolbar</code>.</li>
                 <li>The toolbar div is not focusable because focus is managed with a <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
               </ul>
             </td>
@@ -565,63 +564,48 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           <tr data-test-id="toolbar-aria-label">
             <td></td>
             <th scope="row">
-              <code>aria-label=&quot;Text Formatting&quot;</code>
+              <code>aria-label="Text Formatting"</code>
             </th>
             <td><code>div</code></td>
-            <td>
-                Provides the accessible name of <q>Text Formatting</q> for the functions in the toolbar.
-            </td>
+            <td>Provides the toolbar with an accessible name of &quot;Text Formatting&quot;.</td>
           </tr>
-          <tr>
+          <tr data-test-id="toolbar-aria-controls">
             <td></td>
             <th scope="row">
-              <code>aria-controls=<q>IDREF</q></code>
+              <code>aria-controls="IDREF"</code>
             </th>
             <td><code>div</code></td>
-            <td>
-                Provides a reference to the <code>textarea</code> that the toolbar controls.
-            </td>
+            <td>Set to a value that references the text area, indicating the toolbar controls the text area.</td>
           </tr>
-          <tr >
-            <th scope="row"><code>button</code>, <code>spinbutton</code>, <code>checkbox</code>, <code>link</code></th>
+          <tr data-test-id="toolbar-item-tabindex">
             <td></td>
-            <td><code>button</code>, <code>div</code>, <code>input[type=<q>checkbox</q>]</code>, <code>a</code></td>
+            <th scope="row">
+              <code>tabindex="-1"</code>
+            </th>
+            <td>
+              <code>button</code>, <code>div</code>, <code>input[type="checkbox"]</code>, <code>a</code>
+            </td>
             <td>
               <ul>
-                <li>The toolbar items that are part of the toolbar keyboard navigation include .</li>
-                <li>The toolbar <code>div</code> is not focusable.</li>
+                <li>Makes the toolbar item focusable but not part of the page <kbd>Tab</kbd> sequence.</li>
+                <li>Applied to all toolbar items contained in the toolbar except for one that is included in the page <kbd>Tab</kbd> sequence.</li>
+                <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
               </ul>
             </td>
           </tr>
           <tr data-test-id="toolbar-item-tabindex">
             <td></td>
             <th scope="row">
-              <code>tabindex=<q>-1</q></code>
+              <code>tabindex="0"</code>
             </th>
             <td>
-              <code>button</code>, <code>div</code>, <code>input[type=<q>checkbox</q>]</code>, <code>a</code>
-            </td>
-            <td>
-              <ul>
-                <li>Removes a toolbar item from the page <kbd>Tab</kbd> sequence.</li>
-                <li>Applied to all toolbar items contained in the toolbar except for one that is included in the page <kbd>Tab</kbd> sequence.</li>
-                <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
-              </ul>
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <th scope="row">
-              <code>tabindex=<q>0</q></code>
-            </th>
-            <td>
-              <code>button</code>, <code>div</code>, <code>input[type=<q>checkbox</q>]</code>, <code>a</code>
+              <code>button</code>, <code>div</code>, <code>input[type="checkbox"]</code>, <code>a</code>
             </td>
             <td>
               <ul>
                 <li>Makes the toolbar item part of the page <kbd>Tab</kbd> sequence.</li>
-                <li>Set on only one toolbar item contained by the toolbar.</li>
-                <li>On page load is set on the first toolbar item contained by the toolbar.</li>
+                <li>Set on only one item contained in the toolbar.</li>
+                <li>On page load, set on the first item in the toolbar.</li>
                 <li>Moves with focus inside the toolbar so the most recently focused item is included in the page <kbd>Tab</kbd> sequence.</li>
                 <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
               </ul>
@@ -632,8 +616,8 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="rps2_label">Toggle Buttons (Bold, Italic and Underline)</h3>
-      <table aria-labelledby="rps2_label rps_label" class="data attributes">
+      <h3 id="rps_label_2">Toggle Buttons (Bold, Italic, Underline)</h3>
+      <table aria-labelledby="rps_label_2 rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -643,61 +627,42 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row"><code>button</code></th>
+          <tr data-test-id="toolbar-button-aria-label">
             <td></td>
+            <th scope="row"><code>aria-label="LABEL_STRING"</code></th>
             <td><code>button</code></td>
             <td>
               <ul>
-                <li>The default role of a <code>button</code> element is <code>button</code>.</li>
-                <li>The use of <code>aria-pressed</code> attribute identifies this button as a toggle button.</li>
-                <li>Accessible name is defined using <code>aria-label</code>.</li>
+                <li>Provides an accessible name.</li>
+                <li>Used because the button does not contain text content that can serve as a label.</li>
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="toolbar-button-aria-pressed">
             <td></td>
-            <th scope="row"><code>aria-pressed=<q>true</q></code></th>
+            <th scope="row"><code>aria-pressed="true"</code></th>
             <td><code>button</code></td>
-            <td>
-              <ul>
-                <li>The combination of the <code>aria-pressed</code> attribute with the <code>button</code> role identifies the button as behaving as a toggle button.</li>
-                <li>Indicates the action of the button has been applied, in this case to the styling of the textarea.</li>
-                <li>Used on the bold, italic, underline and text alignment buttons.</li>
-              </ul>
-            </td>
+            <td>Indicates the button is a toggle and that the styling controlled by the button has been applied.</td>
           </tr>
-          <tr>
+          <tr data-test-id="toolbar-button-aria-pressed">
             <td></td>
             <th scope="row"><code>aria-pressed=<q>false</q></code></th>
             <td><code>button</code></td>
-            <td>
-              <ul>
-                <li>The combination of the <code>aria-pressed</code> attribute with the <code>button</code> role identifies the button as behaving as a toggle button.</li>
-                <li>Indicates the action of the button has <strong>not</strong> been applied, in this case to the styling of the textarea.</li>
-                <li>Used on the bold, italic, underline and text alignment buttons.</li>
-              </ul>
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <th scope="row"><code>aria-label=<q><em>name</em></q></code></th>
-            <td><code>button</code></td>
-            <td>
-              <ul>
-                <li>Provides an accessible name for buttons without text content.</li>
-                <li>Used on the bold, italic, underline and text alignment buttons.</li>
-              </ul>
-            </td>
+            <td>Indicates the button is a toggle and that the styling controlled by the button has <strong>NOT</strong> been applied.</td>
           </tr>
         </tbody>
       </table>
     </section>
 
     <section>
-      <h3 id="rps3_label">Radio Group (Text Alignment)</h3>
-      <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be selected (e.g. checked) they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
-      <table aria-labelledby="rps3_label rps_label" class="data attributes">
+      <h3 id="rps_label_3">Radio Group (Text Alignment)</h3>
+      <p>
+        The buttons for choosing left, center, or right text alignment are styled like toggle buttons.
+        However, since pressing one toggles off another so that only one button in the group is in the pressed state, the toggles behave like radio buttons.
+        Because ARIA is designed to describe behavior, not styling, to assistive technologies,
+        the alignment toggles implement the following ARIA attributes described in the <a href="../../#radiobutton">radio group design pattern.</a>
+      </p>
+      <table aria-labelledby="rps_label_3 rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -771,9 +736,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="rps4_label">Button (Cut, Copy and Paste)</h3>
-      <p>NOTE: The <code>aria-disabled</code> attribute is used instead of the DOM <code>.disabled</code> property of the <code>button</code> element to identify the button as disabled.  By using <code>aria-disabled</code> the button can receive keyboard focus and be part of the navigation of the toolbar when it's functionality is enabled or disabled.</p>
-      <table aria-labelledby="rps4_label rps_label" class="data attributes">
+      <h3 id="rps_label_4">Button (Cut, Copy, Paste)</h3>
+      <p>
+        The buttons for cut, copy, and paste implement the following ARIA attributes         described in the <a href="../../#button">button design pattern.</a>
+        While they are HTML button elements, as described in the accessibility features section above, in order to remain focusable when disabled, they use <code>aria-disabled</code> instead of the HTML <code>disabled</code> attribute.
+      </p>
+      <table aria-labelledby="rps_label_4 rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -783,17 +751,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row"><code>button</code></th>
-            <td></td>
-            <td><code>button</code></td>
-            <td>
-              <ul>
-                <li>The default role of a <code>button</code> element is <code>button</code>.</li>
-                <li>Accessible name is comes from the text content of each button (e.g. "cut", "Copy" and "Paste").</li>
-              </ul>
-            </td>
-          </tr>
           <tr>
             <td></td>
             <th scope="row"><code>aria-disabled=<q>true</q></code></th>
