--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -241,7 +241,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-test-id="carousel-key-tab">
                 <th><kbd>Tab</kbd></th>
                 <td>
                   The button becomes visible when it receives keyboard focus.
